--- a/app/src/main/res/layout/frag_bkps.xml
+++ b/app/src/main/res/layout/frag_bkps.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ExpandableListView xmlns:android="http://schemas.android.com/apk/res/android"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/bkps_list"
     android:fastScrollEnabled="true"
-    android:dividerHeight="0dp"
-    android:indicator="@null" />
+    android:dividerHeight="0dp" />
