--- a/app/src/main/res/layout/lay_s.xml
+++ b/app/src/main/res/layout/lay_s.xml
@@ -22,6 +22,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-
+    <ListView android:id="@+id/lay_s_lv_m"
+        android:layout_width="match_parent" android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize" />
 
 </android.support.design.widget.CoordinatorLayout>
