--- a/app/src/main/res/layout/lay_appd.xml
+++ b/app/src/main/res/layout/lay_appd.xml
@@ -28,6 +28,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/lay_appd_m" />
+    <include layout="@layout/lay_appd_m"
+      android:layout_height="match_parent" android:layout_width="match_parent"
+      android:layout_marginTop="64dp" />
 
 </android.support.design.widget.CoordinatorLayout>
