--- a/app/src/main/res/layout/lay_appd_m.xml
+++ b/app/src/main/res/layout/lay_appd_m.xml
@@ -3,16 +3,11 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <ImageView android:id="@+id/lappdm_icon"
-        android:layout_width="48dp"
-        android:layout_height="48dp" />
-
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lappdm_pkg"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/lappdm_icon"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="120dp"
         android:layout_marginTop="2dp"
@@ -23,7 +18,6 @@
         android:text="@string/err_nlauncha"
         android:id="@+id/lappdm_mactivity"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/lappdm_icon"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="20dp"
@@ -41,12 +35,11 @@
 
   <Button android:id="@+id/lappdm_bkp"
     style="?android:attr/buttonStyleSmall"
-    android:layout_width="wrap_content"
+    android:layout_width="100dp"
     android:layout_height="wrap_content"
-    android:text="New Button"
-    android:layout_below="@+id/lappdm_icon"
+    android:text="Backup"
     android:layout_alignParentStart="true"
-    android:layout_marginTop="8dp"/>
+    android:layout_marginTop="56dp"/>
 
 
 </RelativeLayout>
