--- a/app/src/main/res/layout/lay_appd_m.xml
+++ b/app/src/main/res/layout/lay_appd_m.xml
@@ -3,12 +3,15 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <TextView
+  <ImageView android:id="@+id/lappdm_icon"
+    android:layout_width="40dp" android:layout_height="40dp"
+    android:layout_marginStart="8dp" android:layout_marginTop="8dp"/>
+  <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lappdm_pkg"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="56dp"
         android:layout_marginEnd="120dp"
         android:layout_marginTop="2dp"
         android:layout_marginRight="100dp" />
@@ -18,7 +21,7 @@
         android:text="@string/err_nlauncha"
         android:id="@+id/lappdm_mactivity"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="56dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="100dp" />
@@ -40,6 +43,14 @@
     android:text="Backup"
     android:layout_alignParentStart="true"
     android:layout_marginTop="56dp"/>
+
+  <Button android:id="@+id/lappdm_del"
+          style="?android:attr/buttonStyleSmall"
+          android:layout_width="100dp"
+          android:layout_height="wrap_content"
+          android:text="Uninstall"
+          android:layout_toRightOf="@id/lappdm_bkp"
+          android:layout_marginTop="56dp"/>
 
 
 </RelativeLayout>
